# robot-prev

./: .gitignore  2_infrared_detection.sh  3_navigation.sh  4_odom.sh  No1_ubuntu.sh  No2_ubuntu.sh  README.md  control.sh  exchange1.sh  exchange2.sh  frames.gv  infrared_detection.sh  matrix.xml  nav.txt  nav1.txt  navigation.sh  odom.sh  predicted.sh  realsense.sh  vision.sh  vision1.sh  vision2.sh
scripts/ssh/: ubuntu.sh
scripts/topics/: armor_camera.sh  enemy_target.sh  fish_camera.sh  goal.sh  infrared_detection.sh  ukf_enemy.sh
src/: robot_1.launch  robot_2.launch
src/depth_image_proc/launch/: trans.launch
src/realsense2_camera/launch/: rs_rgbd.launch
src/robo_control/: CMakeLists.txt  package.xml
src/robo_control/launch/: odom_exchange1.launch  odom_exchange2.launch  robo1_session1.launch  robo1_strategy1.launch  robo1_strategy2.launch  robo1_strategy3.launch  robo1_strategy4.launch  robo2_session1.launch  robo2_strategy2.launch  robo_control.launch  robo_exchange1.launch  robo_exchange2.launch
src/robo_control/msg/: ArmorInfo.msg  GameInfo.msg  TeamInfo.msg
src/robo_control/script/: pos_recv.py  pos_send.py
src/robo_control/src/: MainControl.cpp  MainControl2.cpp  MainControlStrategy1.cpp  MainControlStrategy2.cpp  MainControlStrategy4.cpp  control_1_session.cpp  control_2_session.cpp  enemy_listen.cpp  navigation_test.cpp  odom_broadcaster.cpp  robo_control.cpp  serial.cpp
src/robo_navigation/: CMakeLists.txt  package.xml
src/robo_navigation/config/: base_local_planner_params.yaml  common_costmap_params.yaml  dwa_local_planner_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  old_base_local_planner_params.yaml  recovery.yaml  teb_local_planner_params.yaml
src/robo_navigation/include/robo_navigation/: PID.h  global_planner.hpp
src/robo_navigation/launch/: amcl_omni.launch  gmapping.launch  matrix.xml  move_base.launch  robo_navigation.launch
src/robo_navigation/map/: rm.pgm  rm.yaml  rm2.pgm  rm2.yaml
src/robo_navigation/script/: 2draw.py  draw_map.py  draw_map_demo.py  map_screenshot_12.05.2018.png~RF172bffc.TMP  matrix.xml  scandata.py
src/robo_navigation/src/: .robo_navigation_node.cpp.kate-swp  global_planner.cpp  nav_testt.cpp  robo_navigation_1.cpp  robo_navigation_node.cpp  send_goal.cpp
src/robo_odom/launch/: robo_odom.launch  robo_odom_robot1.launch  robo_odom_robot2.launch
src/robo_odom/scripts/: ukf_process_node.py  ukf_process_node_video.py  ukf_yaw_node.py
src/robo_vision/: CMakeLists.txt  package.xml
src/robo_vision/include/robo_vision/: ArmorDetector.hpp  ImageConsProd.hpp
src/robo_vision/launch/: robo_vision.launch  robo_vision1.launch  robo_vision2.launch
src/robo_vision/msg/: Armor.msg  ArmorInfo.msg  FishCamInfo.msg
src/robo_vision/param/: camera-02-640.xml  param_config.xml
src/robo_vision/src/: ArmorDetector.cpp  FishCam_node.cpp  ImageConsProd.cpp  ReadCamera.cpp  robo_vision_node.cpp  robo_vision_node1.cpp  test_cam.cpp
src/whurobot_msgs/: CMakeLists.txt  package.xml
(+18 files in other folders)
